creation of variables

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Lover</title>
+    <title>Pet Lovers</title>
 
     <link rel="stylesheet" href="./css/body.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/banner.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+    <script src="./js/script.js"></script>
+
 </head>
 <body>
-    
+    <h1>hola mundo</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolor quam perspiciatis ad sit atque nesciunt magnam beatae iure culpa quos cum fuga, animi dolorem similique laboriosam cupiditate. Aliquam, adipisci?</p>
 </body>
 </html>
