--- a/index.html
+++ b/index.html
@@ -12,11 +12,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <script src="./js/script.js"></script>
 
 </head>
 <body>
-    <h1>hola mundo</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis dolor quam perspiciatis ad sit atque nesciunt magnam beatae iure culpa quos cum fuga, animi dolorem similique laboriosam cupiditate. Aliquam, adipisci?</p>
+
+    <header class="container-header">
+        <div class="conta-header">
+            <div class="cont-header">
+                <div class="first-cont_header">
+                    <ul>
+                        <li><a href="">FAQs</a></li>
+                        <li><a href="">Help</a></li>
+                        <li><a href="">Support</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href=""><i class="bi bi-facebook"></i></a></li>
+                        <li><a href=""><i class="bi bi-twitter-x"></i></a></li>
+                        <li><a href=""><i class="bi bi-linkedin"></i></a></li>
+                        <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                        <li><a href=""><i class="bi bi-youtube"></i></a></li>
+                    </ul>
+                </div>
+                <div class="second-cont_header">
+                    <div class="logo">
+                        <h1><span>Pet</span>Lover</h1>
+                    </div>
+                    <ul>
+                        <li>
+                            <h4>Opening Hours</h4>
+                            <span>8.00AM - 9.00PM</span>
+                        </li>
+                        <li>
+                            <h4>Email Us</h4>
+                            <span>info@example.com</span>
+                        </li>
+                        <li>
+                            <h4>Call Us</h4>
+                            <span>+012 345 6789</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="container_navbar">
+                    <nav class="navbar">
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Service</a>
+                        <a href="#">Booking</a>
+                        <a href="#">Contact</a>
+                    </nav>
+                    <a href="#">Get Quote</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
 </html>
