--- a/index.html
+++ b/index.html
@@ -1,73 +1,89 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Lovers</title>
 
-    <link rel="stylesheet" href="./css/body.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/banner.css">
+    <link rel="stylesheet" href="./css/body.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/banner.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 
     <script src="./js/script.js"></script>
-
-</head>
-<body>
-
+  </head>
+  <body>
     <header class="container-header">
-        <div class="conta-header">
-            <div class="cont-header">
-                <div class="first-cont_header">
-                    <ul>
-                        <li><a href="">FAQs</a></li>
-                        <li><a href="">Help</a></li>
-                        <li><a href="">Support</a></li>
-                    </ul>
-                    <ul>
-                        <li><a href=""><i class="bi bi-facebook"></i></a></li>
-                        <li><a href=""><i class="bi bi-twitter-x"></i></a></li>
-                        <li><a href=""><i class="bi bi-linkedin"></i></a></li>
-                        <li><a href=""><i class="bi bi-instagram"></i></a></li>
-                        <li><a href=""><i class="bi bi-youtube"></i></a></li>
-                    </ul>
-                </div>
-                <div class="second-cont_header">
-                    <div class="logo">
-                        <h1><span>Pet</span>Lover</h1>
-                    </div>
-                    <ul>
-                        <li>
-                            <h4>Opening Hours</h4>
-                            <span>8.00AM - 9.00PM</span>
-                        </li>
-                        <li>
-                            <h4>Email Us</h4>
-                            <span>info@example.com</span>
-                        </li>
-                        <li>
-                            <h4>Call Us</h4>
-                            <span>+012 345 6789</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="container_navbar">
-                    <nav class="navbar">
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Service</a>
-                        <a href="#">Booking</a>
-                        <a href="#">Contact</a>
-                    </nav>
-                    <a href="#">Get Quote</a>
-                </div>
-            </div>
+      <div class="first-conta_header">
+        <div class="first-cont_header">
+            <ul class="header_question">
+                <li><a href="">FAQs</a></li>|
+                <li><a href="">Help</a></li>|
+                <li><a href="">Support</a></li>
+              </ul>
+              <ul>
+                <li><a href=""><i class="bi bi-facebook"></i></a></li>
+                <li> <a href=""><i class="bi bi-twitter-x"></i></a></li>
+                <li><a href=""><i class="bi bi-linkedin"></i></a></li>
+                <li><a href=""><i class="bi bi-instagram"></i></a></li>
+                <li><a href=""><i class="bi bi-youtube"></i></a></li>
+              </ul>
         </div>
+      </div>
+      <div class="second-conta_header">
+        <div class="second-cont_header disable-movil">
+            <div class="logo">
+                <h1>
+                    <span>Pet</span>Lover
+                </h1>
+              </div>
+              <ul>
+                <li>
+                  <h4>Opening Hours</h4>
+                  <span>8.00 AM - 9.00 PM</span>
+                </li>
+                <li>
+                  <h4>Email Us</h4>
+                  <span>info@example.com</span>
+                </li>
+                <li>
+                  <h4>Call Us</h4>
+                  <span>+012 345 6789</span>
+                </li>
+              </ul>
+        </div>
+      </div>
+      <div class="container_navbar">
+        <div class="conta_navbar">
+            <div class="logo disable-pc activate">
+                <h1>
+                    <span>Pet</span>Lover
+                </h1>
+              </div>
+            <div class="containar_icon-bar disable-pc" onclick="llamar()">
+                <i class="icon-bar bi bi-list-task"></i>
+            </div>
+            <nav class="navbar">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Service</a>
+                <a href="#">Booking</a>
+                <a href="#">Contact</a>
+                <a href="#" class="disable-pc">Get Quote</a>
+              </nav>
+              <a href="#" class="disable-movil">Get Quote</a>
+        </div>
+      </div>
     </header>
-
-</body>
+  </body>
 </html>
