--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     <header class="container-header">
       <div class="first-conta_header">
         <div class="first-cont_header">
-          <ul class="header_question">
-            <li><a href="">FAQs</a></li>
-            |
-            <li><a href="">Help</a></li>
-            |
-            <li><a href="">Support</a></li>
-          </ul>
+          <div class="disable-movil">
+            <ul>
+              <li><a href="">FAQs</a></li>
+              |
+              <li><a href="">Help</a></li>
+              |
+              <li><a href="">Support</a></li>
+            </ul>
+          </div>
           <ul>
             <li>
               <a href=""><i class="bi bi-facebook"></i></a>
@@ -49,21 +51,21 @@
         </div>
       </div>
       <div class="second-conta_header">
-        <div class="second-cont_header disable-movil">
-          <div class="logo">
+        <div class="second-cont_header">
+          <div class="logo disable-movil">
             <h1><span>Pet</span>Lover</h1>
           </div>
           <ul>
             <li>
-              <h4>Opening Hours</h4>
+              <h4 class="disable-movil">Opening Hours</h4>
               <span>8.00 AM - 9.00 PM</span>
             </li>
             <li>
-              <h4>Email Us</h4>
+              <h4 class="disable-movil">Email Us</h4>
               <span>info@example.com</span>
             </li>
             <li>
-              <h4>Call Us</h4>
+              <h4 class="disable-movil">Call Us</h4>
               <span>+012 345 6789</span>
             </li>
           </ul>
