--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Service</a>
-            <a href="#">Booking</a>
+            <a href="#">Blog</a>
             <a href="#">Contact</a>
             <a href="#" class="disable-pc activate-movil">Get Quote</a>
           </nav>
@@ -91,5 +91,19 @@
         </div>
       </div>
     </header>
+
+    <div class="container_banner">
+      <div class="conta_banner">
+        <h5 style="color: #DC7633;">Best Pet Services</h5>
+        <h2><span class="color-secondary">K</span>eep <span class="color-teritary">Y</span>our <span class="color-secondary">P</span>et <span class="color-teritary">H</span>appy</h2>
+        <p>Duo nonumy et dolor tempor no et. Diam sit diam sit diam erat</p>
+        <div class="buttons_banner">
+          <a href="#" class="first-button">Our Blog</a>
+          <a href="#" class="second-button">Lear More</a>
+        </div>
+      </div>
+    </div>
+
+
   </body>
 </html>
