--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </ul>
         </div>
       </div>
-      <div class="container_navbar" id="MenuNavbar">
+      <div class="container_navbar">
         <div class="conta_navbar">
           <div class="logo disable-pc activate-movil">
             <h1><span>Pet</span>Lover</h1>
