--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/body.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/banner.css" />
+    <link rel="stylesheet" href="./css/section.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,7 +51,7 @@
           </ul>
         </div>
       </div>
-      <div class="second-conta_header">
+      <div class="second-conta_header" id="SecondHeader">
         <div class="second-cont_header">
           <div class="logo disable-movil">
             <h1><span>Pet</span>Lover</h1>
@@ -104,26 +105,52 @@
       </div>
     </div>
 
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus soluta non nihil voluptates beatae fugit adipisci praesentium odit molestias labore! Nulla qui deserunt omnis fuga quam numquam sed laborum voluptate!
-    Dignissimos alias nam praesentium modi libero architecto corrupti officiis voluptatum magni! Necessitatibus obcaecati quibusdam sit commodi et, quidem sunt dolor distinctio expedita corporis qui possimus perferendis dolorem quam, tempora minus.
-    Voluptatem reiciendis, enim quos odio nostrum excepturi blanditiis magni. Ipsum nesciunt fugiat rerum dolorum ipsam laboriosam est aperiam non tempore consectetur! Saepe ab voluptate dolorum, eius quo tempora vel illum!
-    Voluptate dolore nesciunt, consequatur amet vitae eum vel. Rerum, atque. Voluptatum quia voluptate accusantium, quas quibusdam ipsam dicta tenetur esse, ducimus qui harum culpa. Iure iste laborum veniam quaerat odit!
-    Eaque dolores quod minus suscipit, adipisci, totam libero culpa ullam id dolorum voluptate quas veritatis molestias possimus iure aperiam recusandae assumenda facilis. Ducimus explicabo consequuntur optio molestias ab autem hic?
-    Cumque neque eius illo vitae modi, molestiae reiciendis officiis quibusdam cum nesciunt beatae deserunt sequi libero fugiat dolore eum totam dicta laudantium nihil iusto nam. Laudantium totam harum veniam a!
-    Tempora adipisci perferendis aut cumque sint voluptates earum ducimus nam possimus iusto molestiae veritatis alias laborum non explicabo quibusdam eaque, modi sit fugit a, quas architecto quam? Asperiores, perspiciatis possimus?
-    Blanditiis illo adipisci, assumenda facere non eaque maiores magni, laudantium alias reiciendis illum neque doloremque similique, dicta modi! Optio, quam. Amet reiciendis officiis fuga quisquam nobis provident veritatis quibusdam suscipit?
-    Perferendis quidem et, aliquid amet atque velit provident officiis eius quasi libero consequatur fugit. Quis animi, distinctio provident consequatur vel eaque illum facilis atque dolor accusantium quisquam tenetur repellat placeat.
-    Ab iure repudiandae laudantium unde quo minus nihil suscipit explicabo, rerum deserunt excepturi fugit distinctio natus deleniti molestiae fugiat doloribus dolor, dicta eos sint reprehenderit veritatis obcaecati. Neque, maiores corrupti.
-    Esse voluptate ipsa atque quia animi consectetur, voluptatem optio nesciunt repellendus laborum. Cum consequatur excepturi eligendi nesciunt adipisci velit dignissimos minima, eaque, veniam fugiat officiis quaerat blanditiis illum pariatur ipsum?
-    Similique, accusamus sed? Quos autem repudiandae similique itaque rem sequi, voluptatibus officiis eum cumque alias unde in officia sapiente amet debitis est a, quo odio perspiciatis aperiam vel quasi! Cupiditate!
-    Eligendi a, atque cum sequi deserunt tempore nihil enim molestiae dolorem optio dolorum. Consequuntur, voluptates nemo? Illum, voluptate dolorem! Tenetur ipsam amet, fugit dolorum velit quas corporis earum optio quis.
-    Atque eos sint incidunt. Eos magnam excepturi atque, reiciendis voluptatum porro debitis quaerat unde error obcaecati minima totam explicabo libero adipisci eligendi laborum voluptatem reprehenderit et pariatur, quae corrupti. Provident.
-    Autem nulla, sit possimus aspernatur reiciendis ipsa veritatis rem nisi non doloribus fugiat commodi! Pariatur rerum quisquam est soluta officia porro fugit blanditiis nemo veniam minus. Delectus itaque impedit a.
-    Inventore cum nam quas doloribus veniam totam asperiores sint labore, saepe fugiat! Vel suscipit, vero facere velit, iusto tenetur enim delectus voluptas excepturi amet atque aliquid asperiores, ipsum possimus alias.
-    Temporibus sit neque molestiae iure delectus reprehenderit repudiandae consectetur. Dolorem non illo enim cumque vel? Dolor, recusandae et sed vel cumque ex nam, magnam magni distinctio atque perspiciatis impedit veniam?
-    Voluptatibus corporis beatae ut dolor provident omnis ullam labore sed perferendis sit adipisci, cupiditate, neque incidunt debitis dolorum at laudantium delectus cum quo illum ipsa nulla quod recusandae. Explicabo, veniam.
-    Non mollitia autem perspiciatis dolorum, sunt ducimus veritatis distinctio beatae et amet molestias inventore, vel temporibus accusantium dicta eligendi reiciendis maxime quibusdam fugiat cupiditate commodi sint eum. Sequi, a repudiandae.
-    Rem perspiciatis repellendus nemo id minus mollitia pariatur sed officiis cupiditate architecto et dolorem optio alias magni a vel ut hic nulla expedita earum, quibusdam quod! Iusto molestiae deleniti qui?
+    <main>
+      <section class="container-reservation">
+        <div class="conta-reservation">
+          <div class="container-formulario">
+            <form action="">
+              <input type="text" name="" id="" placeholder="Your Name" >
+              <input type="email" name="" id="" placeholder="Your Email">
+              <input type="number" name="" id="" placeholder="Your Phone">
+              <input type="datetime-local" name="" id="" placeholder="conta-reservation">
+              <select value="">
+                <option name="" id="" selected disabled>Select a</option>
+                <option name="" id="">Service 1</option>
+                <option name="" id="">Service 2</option>
+                <option name="" id="">Service 3</option>
+                <option name="" id="">Service 4</option>
+              </select>
+              <input type="submit" value="Book Now">
+            </form>
+          </div>
+          <div class="info-reservation">
+            <h4>Going for a vacation?</h4>
+            <h2>Book For <span>Your Pet</span></h2>
+            <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
+            <div class="conta-services">
+              <div class="service">
+                <h3><i class="fa-solid fa-shield-dog"></i> Pet Boarding</h3>
+                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+              </div>
+              <div class="service">
+                <h3><i class="fa-solid fa-bone"></i> Pet Feeding</h3>
+                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+              </div>
+              <div class="service">
+                <h3><i class="fa-solid fa-shower"></i> Pet Grooming</h3>
+                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+              </div>
+              <div class="service">
+                <h3><i class="fa-solid fa-dog"></i> Pet Tranning</h3>
+                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
 
   </body>
