--- a/index.html
+++ b/index.html
@@ -130,20 +130,28 @@
             <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
             <div class="conta-services">
               <div class="service">
-                <h3><i class="fa-solid fa-shield-dog"></i> Pet Boarding</h3>
-                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                <div class="service-title">
+                  <i class="fa-solid fa-shield-dog icon-service"></i><h3>Pet Boarding</h3>
+                </div>
+                <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <h3><i class="fa-solid fa-bone"></i> Pet Feeding</h3>
-                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                <div class="service-title">
+                  <i class="fa-solid fa-bone icon-service"></i><h3>Pet Feeding</h3>
+                </div>
+                <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <h3><i class="fa-solid fa-shower"></i> Pet Grooming</h3>
-                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                <div class="service-title">
+                  <i class="fa-solid fa-shower icon-service"></i><h3>Pet Grooming</h3>
+                </div>
+                <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <h3><i class="fa-solid fa-dog"></i> Pet Tranning</h3>
-                <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
+                <div class="service-title">
+                  <i class="fa-solid fa-dog icon-service"></i><h3>Pet Tranning</h3>
+                </div>
+                <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
             </div>
           </div>
