--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
     </div>
 
     <main>
-      <section class="container-reservation">
-        <div class="conta-reservation">
-          <div class="container-formulario">
+      <section class="container_reservation">
+        <div class="conta_reservation">
+          <div class="container_formulario">
             <form action="">
               <input type="text" name="" id="" placeholder="Your Name" >
               <input type="email" name="" id="" placeholder="Your Email">
               <input type="number" name="" id="" placeholder="Your Phone">
-              <input type="datetime-local" name="" id="" placeholder="conta-reservation">
+              <input type="datetime-local" name="" id="">
               <select value="">
                 <option name="" id="" selected disabled>Select a</option>
                 <option name="" id="">Service 1</option>
@@ -124,32 +124,32 @@
               <input type="submit" value="Book Now">
             </form>
           </div>
-          <div class="info-reservation">
+          <div class="info_reservation">
             <h4>Going for a vacation?</h4>
             <h2>Book For <span>Your Pet</span></h2>
             <p>Labore vero lorem eos sed aliquy ipsum aliquy sed. Vero dolore dolore takima ipsum lorem rebum</p>
-            <div class="conta-services">
+            <div class="conta_services">
               <div class="service">
-                <div class="service-title">
-                  <i class="fa-solid fa-shield-dog icon-service"></i><h3>Pet Boarding</h3>
+                <div class="service_title">
+                  <i class="fa-solid fa-shield-dog icon_service"></i><h3>Pet Boarding</h3>
                 </div>
                 <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <div class="service-title">
-                  <i class="fa-solid fa-bone icon-service"></i><h3>Pet Feeding</h3>
+                <div class="service_title">
+                  <i class="fa-solid fa-bone icon_service"></i><h3>Pet Feeding</h3>
                 </div>
                 <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <div class="service-title">
-                  <i class="fa-solid fa-shower icon-service"></i><h3>Pet Grooming</h3>
+                <div class="service_title">
+                  <i class="fa-solid fa-shower icon_service"></i><h3>Pet Grooming</h3>
                 </div>
                 <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
               <div class="service">
-                <div class="service-title">
-                  <i class="fa-solid fa-dog icon-service"></i><h3>Pet Tranning</h3>
+                <div class="service_title">
+                  <i class="fa-solid fa-dog icon_service"></i><h3>Pet Tranning</h3>
                 </div>
                 <p align="center">Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet</p>
               </div>
@@ -157,6 +157,35 @@
           </div>
         </div>
       </section>
+
+      <section class="container_AboutUs">
+        <div class="conta_AboutUs">
+          <div class="conten_AboutUs">
+            <h4>About Us</h4>
+            <h2><span>Boarding</span> & <span>Daycare</span></h2>
+            <span>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat vero sit.</span>
+            <p>
+              Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo
+            </p>
+            <ul>
+              <li>Best In Industry</li>
+              <li>Emergency Services</li>
+              <li>24/7 Customer Support</li>
+            </ul>
+            <a href="#">Lear More</a>
+          </div>
+          <figure class="img_About">
+            <div class="img_col">
+              <img src="./img/about-1.jpg" alt="">
+            </div>
+            <div class="img_row">
+              <img src="./img/about-2.jpg" alt="">
+              <img src="./img/about-3.jpg" alt="">
+            </div>
+          </figure>
+        </div>
+      </section>
+
     </main>
 
 
