--- a/index.html
+++ b/index.html
@@ -108,22 +108,20 @@
     <main>
       <section class="container_reservation">
         <div class="conta_reservation">
-          <div class="container_formulario">
-            <form action="">
-              <input type="text" name="" id="" placeholder="Your Name" >
-              <input type="email" name="" id="" placeholder="Your Email">
-              <input type="number" name="" id="" placeholder="Your Phone">
-              <input type="datetime-local" name="" id="">
-              <select value="">
-                <option name="" id="" selected disabled>Select a</option>
-                <option name="" id="">Service 1</option>
-                <option name="" id="">Service 2</option>
-                <option name="" id="">Service 3</option>
-                <option name="" id="">Service 4</option>
-              </select>
-              <input type="submit" value="Book Now">
-            </form>
-          </div>
+          <form action="">
+            <input type="text" name="" id="" placeholder="Your Name" >
+            <input type="email" name="" id="" placeholder="Your Email">
+            <input type="number" name="" id="" placeholder="Your Phone">
+            <input type="datetime-local" name="" id="">
+            <select value="">
+              <option name="" id="" selected disabled>Select a</option>
+              <option name="" id="">Service 1</option>
+              <option name="" id="">Service 2</option>
+              <option name="" id="">Service 3</option>
+              <option name="" id="">Service 4</option>
+            </select>
+            <input type="submit" value="Book Now">
+          </form>
           <div class="info_reservation">
             <h4>Going for a vacation?</h4>
             <h2>Book For <span>Your Pet</span></h2>
@@ -162,8 +160,8 @@
         <div class="conta_AboutUs">
           <div class="conten_AboutUs">
             <h4>About Us</h4>
-            <h2><span>Boarding</span> & <span>Daycare</span></h2>
-            <span>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat vero sit.</span>
+            <h2><span style="color: var(--secondary-font_color);">Boarding</span> & <span style="color: var(--tertiary-font_color);">Daycare</span></h2>
+            <span><b>Amet stet amet ut. Sit no vero vero no dolor. Sed erat ut sea. Just clita ut stet kasd at diam sit erat vero sit.</b></span>
             <p>
               Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd ut. Erat duo eos et erat sed diam duo
             </p>
