--- a/index.html
+++ b/index.html
@@ -184,6 +184,49 @@
         </div>
       </section>
 
+      <section class="container_functions">
+        <div class="conta_functions">
+          <h4>Our Services</h4>
+          <h2><span>Premium</span> Pet Services</h2>
+          <div class="function">
+            <i class="fa-solid fa-shield-dog"></i>
+            <h3>Pet Boarding</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="function">
+            <i class="fa-solid fa-bone"></i>
+            <h3>Pet Feeding</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="function">
+            <i class="fa-solid fa-scissors"></i>
+            <h3>Pet Grooming</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="function">
+            <i class="fa-solid fa-cat"></i>
+            <h3>Per Training</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="function">
+            <i class="fa-solid fa-dog"></i>
+            <h3>Pet Exercise</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+          <div class="function">
+            <i class="fa-solid fa-notes-medical"></i>
+            <h3>Pet Treatment</h3>
+            <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
+            <a href="">Read More</a>
+          </div>
+        </div>
+      </section>
+
     </main>
 
 
