--- a/index.html
+++ b/index.html
@@ -189,40 +189,40 @@
           <h4>Our Services</h4>
           <h2><span>Premium</span> Pet Services</h2>
           <div class="function">
-            <i class="fa-solid fa-shield-dog"></i>
+            <i class="fa-solid fa-shield-dog icon_function"></i>
             <h3>Pet Boarding</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
           </div>
           <div class="function">
-            <i class="fa-solid fa-bone"></i>
+            <i class="fa-solid fa-bone icon_function"></i>
             <h3>Pet Feeding</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
           </div>
           <div class="function">
-            <i class="fa-solid fa-scissors"></i>
+            <i class="fa-solid fa-scissors icon_function"></i>
             <h3>Pet Grooming</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
           </div>
           <div class="function">
-            <i class="fa-solid fa-cat"></i>
+            <i class="fa-solid fa-cat icon_function"></i>
             <h3>Per Training</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
           </div>
           <div class="function">
-            <i class="fa-solid fa-dog"></i>
+            <i class="fa-solid fa-dog icon_function"></i>
             <h3>Pet Exercise</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
             <a href="">Read More</a>
           </div>
           <div class="function">
-            <i class="fa-solid fa-notes-medical"></i>
+            <i class="fa-solid fa-notes-medical icon_function"></i>
             <h3>Pet Treatment</h3>
             <p>Diam amet eos at no eos sit lorem, amet rebum ipsum clita stet, diam sea est magna diam eos, rebum sit vero stet ipsum justo</p>
-            <a href="">Read More</a>
+            <a href="#">Read More</a>
           </div>
         </div>
       </section>
