--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <input type="text" name="" id="" placeholder="Your Name" >
             <input type="email" name="" id="" placeholder="Your Email">
             <input type="number" name="" id="" placeholder="Your Phone">
-            <input type="datetime-local" name="" id="">
+            <input type="datetime-local" name="" id="" placeholder="Reservation">
             <select value="">
               <option name="" id="" selected disabled>Select a</option>
               <option name="" id="">Service 1</option>
