--- a/index.html
+++ b/index.html
@@ -112,7 +112,27 @@
             <input type="text" name="" id="" placeholder="Your Name" >
             <input type="email" name="" id="" placeholder="Your Email">
             <input type="number" name="" id="" placeholder="Your Phone">
-            <input type="datetime-local" name="" id="" placeholder="Reservation">
+            <input type="datetime-local" id= "dateInput">
+
+          <script>
+            function addZeros(time) {
+                if (time < 10) {
+                    time = "0" + time;
+                }
+                return time;
+            }
+            const today = new Date();
+            let dd = today.getDate() ;
+                let mm = today.getMonth() + 1;
+                let yyyy = today.getFullYear();
+                let hr = addZeros(today.getHours());
+                let min = addZeros(today.getMinutes());
+                dd = addZeros(dd);
+                mm = addZeros(mm)
+            let todayString = yyyy + '-' + mm + '-' + dd+'T'+ hr+':'+min;
+            dateInput.value= todayString;
+          </script>
+            
             <select value="">
               <option name="" id="" selected disabled>Select a</option>
               <option name="" id="">Service 1</option>
