article | feature update 2

--- a/index.html
+++ b/index.html
@@ -254,10 +254,18 @@
         <div class="conta_feature">
           <div class="cont_feature">
             <figure>
-              
+              <img src="./img/feature.jpg" alt="" width="100%">
             </figure>
             <div class="content_info-feature">
-
+              <h4>Why Choose Us?</h4>
+              <h2><span>Special Care</span> On Pets</h2>
+              <p>Dolor lorem lorem ipsum sit et ipsum. Sadip sea amet diam sed ut vero no sit. Et elitr stet sed sit sed kasd. Erat duo eos et erat sed diam duo</p>
+              <div class="feature_aspect">
+                <i class="fa-solid fa-cat icon_feature"><span>Best In Industry</span></i>
+                <i class="fa-solid fa-hospital-user icon_feature"><span>Emergency Services</span></i>
+                <i class="fa-solid fa-hand-holding-heart icon_feature"><span>Special Care</span></i>
+                <i class="fa-solid fa-dog icon_feature"><span>Customer Support</span></i>
+              </div>
             </div>
           </div>
         </div>
