--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <script src="https://kit.fontawesome.com/d70c66a935.js" crossorigin="anonymous"></script>
 
-    <script src="./js/script.js"></script>
   </head>
   <body>
     <header class="container-header">
@@ -270,10 +269,31 @@
           </div>
         </div>
       </article>
-      
+
+      <article class="container_teams">
+        <div class="conta_teams">
+          <h2>Team Member</h2>
+          <h4>Meet Our <span>Team Member</span></h4>
+          <div class="teams">
+            <div class="team_person">
+              <img src="./img/team-1.jpg" alt="">
+            </div>
+            <div class="team_person">
+              <img src="./img/team-2.jpg" alt="">
+            </div>
+            <div class="team_person">
+              <img src="./img/team-3.jpg" alt="">
+            </div>
+            <div class="team_person">
+              <img src="./img/team-4.jpg" alt="">
+            </div>
+          </div>
+        </div>
+      </article>
+
     </main>
 
-
+    <script src="./js/script.js"></script>
 
   </body>
 </html>
