article | teams update 2

--- a/index.html
+++ b/index.html
@@ -272,25 +272,65 @@
 
       <article class="container_teams">
         <div class="conta_teams">
-          <h2>Team Member</h2>
-          <h4>Meet Our <span>Team Member</span></h4>
+          <h4>Team Member</h4>
+          <h2>Meet Our <span>Team Member</span></h2>
           <div class="teams">
             <div class="team_person">
-              <img src="./img/team-1.jpg" alt="">
+              <img src="./img/team-1.jpg" alt="" width="100%" height="100%">
+                <div class="content-team_person">
+                  <h3>Mollies Ross</h3>
+                  <p>Founder & CEO</p>
+                    <ul class="social_person">
+                      <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                      <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                      <li><a href="#"><i class="bi bi-whatsapp"></i></a></li>
+                      <li><a href="#"><i class="bi bi-twitter-x"></i></a></li>
+                    </ul>
+                </div>
             </div>
             <div class="team_person">
-              <img src="./img/team-2.jpg" alt="">
+              <img src="./img/team-2.jpg" alt="" width="100%" height="100%">
+              <div class="content-team_person">
+                <h3>Jennifer Page</h3>
+                <p>Chef Executive</p>
+                  <ul class="social_person">
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-whatsapp"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter-x"></i></a></li>
+                  </ul>
+              </div>
             </div>
             <div class="team_person">
-              <img src="./img/team-3.jpg" alt="">
+              <img src="./img/team-3.jpg" alt="" width="100%" height="100%">
+              <div class="content-team_person">
+                <h3>Kate Glover</h3>
+                <p>Doctor</p>
+                  <ul class="social_person">
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-whatsapp"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter-x"></i></a></li>
+                  </ul>
+              </div>
             </div>
             <div class="team_person">
-              <img src="./img/team-4.jpg" alt="">
+              <img src="./img/team-4.jpg" alt="" width="100%" height="100%">
+              <div class="content-team_person">
+                <h3>Lilly Fry</h3>
+                <p>Trainer</p>
+                  <ul class="social_person">
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-whatsapp"></i></a></li>
+                    <li><a href="#"><i class="bi bi-twitter-x"></i></a></li>
+                  </ul>
+              </div>
             </div>
           </div>
         </div>
       </article>
-
+      
     </main>
 
     <script src="./js/script.js"></script>
