--- a/index.html
+++ b/index.html
@@ -330,7 +330,50 @@
           </div>
         </div>
       </article>
-      
+
+      <article class="container_testimonials">
+        <div class="conta_testimonials">
+          <h4>Testimonial</h4>
+          <h2>Our Client <span>Says</span></h2>
+          <div class="person_testimonials" id="person_testimonials">
+            <div class="person">
+              <figure>
+                <img src="./img/testimonial-1.jpg" alt="">
+              </figure>
+              <h3>Cliente Name</h3>
+              <p>Profesional</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
+            </div>
+            <div class="person">
+              <figure>
+                <img src="./img/testimonial-2.jpg" alt="">
+              </figure>
+              <h3>Cliente Name</h3>
+              <p>Profesional</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
+            </div>
+            <div class="person">
+              <figure>
+                <img src="./img/testimonial-3.jpg" alt="">
+              </figure>
+              <h3>Cliente Name</h3>
+              <p>Profesional</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
+            </div>
+            <div class="person">
+              <figure>
+                <img src="./img/testimonial-4.jpg" alt="">
+              </figure>
+              <h3>Cliente Name</h3>
+              <p>Profesional</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
+            </div>
+          </div>
+          <div class="conta-buttons">
+            <div class="testimonial-buttons" id="testimonial-buttons"></div>
+          </div>
+        </div>
+      </article>
     </main>
 
     <script src="./js/script.js"></script>
